2021-07-01  Youenn Fablet  <youenn@apple.com>

        [Cocoa] Migrate WebRTC UDP socket handling to NW API
        https://bugs.webkit.org/show_bug.cgi?id=227210

        Reviewed by Eric Carlson.

        * Configurations/libwebrtc.iOS.exp:
        * Configurations/libwebrtc.iOSsim.exp:
        * Configurations/libwebrtc.mac.exp:

2021-06-30  Truitt Savell  <tsavell@apple.com>

        Unreviewed, reverting r279405.

        Casued 50+ webrtc crashes on Big Sur Debug

        Reverted changeset:

        "[Cocoa] Migrate WebRTC UDP socket handling to NW API"
        https://bugs.webkit.org/show_bug.cgi?id=227210
        https://commits.webkit.org/r279405

2021-06-30  Youenn Fablet  <youenn@apple.com>

        [Cocoa] Migrate WebRTC UDP socket handling to NW API
        https://bugs.webkit.org/show_bug.cgi?id=227210

        Reviewed by Eric Carlson.

        * Configurations/libwebrtc.iOS.exp:
        * Configurations/libwebrtc.iOSsim.exp:
        * Configurations/libwebrtc.mac.exp:

2021-06-23  Eric Carlson  <eric.carlson@apple.com>

        WebKitDecoder.h should include TargetConditionals.h
        https://bugs.webkit.org/show_bug.cgi?id=227314
        <rdar://problem/79689776>

        Reviewed by Geoff Garen.

        * Source/webrtc/sdk/WebKit/WebKitDecoder.h: Include TargetConditionals.h so the
        TARGET_ defines are initialized correctly.

2021-06-21  Eric Carlson  <eric.carlson@apple.com>

        [Mac] libwebrtc CMBaseClass objects need alignment fixup
        https://bugs.webkit.org/show_bug.cgi?id=227137
        <rdar://problem/79464124>

        Reviewed by Youenn Fablet.

        * Source/webrtc/sdk/WebKit/WebKitDecoder.h: Define CMBASE_OBJECT_NEEDS_ALIGNMENT.

        * Source/webrtc/sdk/WebKit/WebKitVP8Decoder.cpp:
        (webrtc::createWebKitVP8Decoder): Add padding to the CMBaseClass object on Mac and
        Mac Catalyst when building for x86_64 so function pointers are naturally aligned.